Fix navbar that automatically collapses

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -23,6 +23,18 @@ body {
   background-color: #e2e2f3;
 }
 
+.navbar-menu {
+  display: block;
+}
+
+.navbar-toggler {
+  display: none;
+}
+
+#show, #hide {
+  flex: 5;
+}
+
 .form_income {
   position: absolute;
   top: 100px;
